# TTennis-Pickup-Robot

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: communication.yml  coordinator.yml  edgenn.yml  integration.yml  nav2.yml  rtabmap.yml
1.Hardware/A.PowerDeliveryBoard/: PCB走線.pcbdoc  README.md  原理圖.schdoc
1.Hardware/A.PowerDeliveryBoard/CAD/: OBJ_power_pcb.mtl
2.Firmware/: .project
2.Firmware/Core-STM32H7/: .cproject  .mxproject  .project  Core-STM32H7 Release.launch  Core-STM32H7.ioc  Core-STM32H7.launch  STM32H723ZGTX_FLASH.ld  STM32H723ZGTX_RAM.ld  ttennis Debug.launch
2.Firmware/Core-STM32H7/Chassis/: chassis.cpp  chassis.h
2.Firmware/Core-STM32H7/Encoder/: encoder.cpp  encoder.h
2.Firmware/Core-STM32H7/Intake/: intake.cpp  intake.hpp
2.Firmware/Core-STM32H7/Interrupt/: interrupt.cpp  interrupt.h
2.Firmware/Core-STM32H7/Manual/: manual.cpp  manual.h
2.Firmware/Core-STM32H7/Motor/: dc_motor.cpp  dc_motor.h  motor.cpp  motor.h
2.Firmware/Core-STM32H7/ROS1/: ros1.cpp  ros1.h
3. Software/A. main-ws/docker/: Dockerfile  main-compose.yaml
3. Software/B. localization-ws/docker/: Dockerfile  loc-compose.yaml
3. Software/C. EdgeNN/: docker.sh
3. Software/C. EdgeNN/docker/: Dockerfile  compose-run.yml
3. Software/C. navigation-ws/docker/: Dockerfile  nav-compose.yaml
3. Software/D. vision-ws/docker/: Dockerfile  vis-compose.yaml
3.Software/: Readme.md
3.Software/A.Coordinator/: pull_and_run.sh
3.Software/A.Coordinator/main-ws/src/conference/: CMakeLists.txt
3.Software/A.Coordinator/main-ws/src/conference/include/conference/: basket.hpp  elevator.hpp  intake.hpp  nav.hpp
3.Software/A.Coordinator/main-ws/src/conference/src/: basket.cpp  demo_elevator.cpp  demo_intake.cpp  demo_nav_retrieval.cpp  demo_retrieval_drop.cpp  demo_retrieval_supply.cpp  elevator.cpp  intake.cpp  nav.cpp
3.Software/B.Navigation/: app.sh  build_and_run.sh  exploration-mode.sh  fast-app.sh  pull_and_run.sh
3.Software/B.Navigation/nav2-ws/install/teleop/share/teleop/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
3.Software/B.Navigation/nav2-ws/install/teleop/share/teleop/cmake/: teleopConfig-version.cmake  teleopConfig.cmake
3.Software/B.Navigation/nav2-ws/install/teleop/share/teleop/environment/: ament_prefix_path.dsv  path.dsv
3.Software/B.Navigation/nav2-ws/install/teleop/share/teleop/launch/: wasd.launch
3.Software/C.EdgeNN/: Readme.md  _run.sh  app.sh  build_and_run.sh  pull_and_run.sh
3.Software/D.RTABMap/: _run.sh  app.sh  build_and_run.sh  docker.sh  fast-app.sh  mapping-mode.sh  pull_and_run.sh  rtabmap-mapping.sh
3.Software/E.Communication/: _run.sh  app.sh  build_and_run.sh  pull_and_run.sh
3.Software/E.Integration/: app.sh  fast-app.sh  ros1-bridge.sh
3.Software/F.NextjsApp/: app.sh
4. Model/: epomaker_RT100.ipt  epomaker_RT100.stl
4. Model/Computer/: base.ipt  cover-power.ipt
4.Model/: epomaker_RT100.ipt
(+3262 files in other folders)
